fix(service): allow active subscriptions to be updated with valid clientIds
(cherry picked from commit 00f4d43cf30c171d837be01fc53fe04c709c855d)